# MLOps-Basics

./: .gitignore
week_0_project_setup/: inference.py  pyproject.toml  requirements.txt
week_1_wandb_logging/: inference.py  pyproject.toml  requirements.txt  train.py
week_2_hydra_config/: inference.py  pyproject.toml  requirements.txt
week_4_onnx/: pyproject.toml  requirements.txt
week_5_docker/: Dockerfile  pyproject.toml  requirements.txt  requirements_inference.txt
