[tool.poetry]
name = "week-0-project-setup"
version = "0.1.0"
description = ""
authors = ["jswon-dev <jswon.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "week_0_project_setup"}]

[tool.poetry.dependencies]
python = "3.8.13"
pytorch-lightning = "1.2.10"
datasets = "1.6.2"
transformers = "4.5.1"
scikit-learn = "1.3.0"
packaging = "21.3"
pyarrow = "12.0.1"
numpy = "1.23.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
